--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-
+/* @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap"); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  @apply font-space text-black dark:text-white;
+  @apply text-black dark:text-white font-space;
+  /* font-family: "Geologica", sans-serif; */
+  /* font-family: "League Spartan", sans-serif; */
 }
 
 @layer base {
